--- a/hkhl/b2c.html
+++ b/hkhl/b2c.html
@@ -5571,6 +5571,7 @@ a {
     };
     var tasks = [
         "../images/b2c/b_person_body.png",
+        "../images/b2c/bg2.png",
         "../images/b2c/chair.png",
         "../images/b2c/chair_nobody.png",
         "../images/b2c/logo_1.png",
