--- a/hkhl/b2c.html
+++ b/hkhl/b2c.html
@@ -4535,7 +4535,7 @@ a {
         -webkit-animation-delay: 0.1s;
     }
     /* mc-wrap-page */
-    .mc-wrap-page{position: absolute;bottom: 60px;z-index: 1000;width: 100%;height: 31px;overflow: hidden;text-align: center;transition:opacity .2s;}
+    .mc-wrap-page{position: absolute;bottom: 60px;z-index: 1000;width: 100%;height: 31px;overflow: hidden;text-align: center;transition:opacity .2s;display:none;/*@20150728*/}
     .mc-wrap-page span{display: inline-block;width: 14px;height: 14px;background-image: url(../images/arrow_icon2.png);background-position: 0 -62px;background-size: 76px auto;margin-right: 10px;opacity: 0.5;}
     .mc-wrap-page span.page-current{background-position: 0 -62px;opacity: 1}
 </style>
