--- a/hkhl/b2c_11.html
+++ b/hkhl/b2c_11.html
@@ -1432,6 +1432,7 @@
             right: 0;
             z-index: 22;
             opacity: 0;
+            top: 893px;
         }
         .scene-2 .right-finger{
             background-image: url("../images/b2c/p4_right_finger.png");
@@ -4455,7 +4456,7 @@
             -webkit-animation-delay: 0.1s;
         }
         /* mc-wrap-page */
-        .mc-wrap-page{position: absolute;bottom: 60px;z-index: 1000;width: 100%;height: 31px;overflow: hidden;text-align: center;transition:opacity .2s;}
+        .mc-wrap-page{position: absolute;bottom: 60px;z-index: 1000;width: 100%;height: 31px;overflow: hidden;text-align: center;transition:opacity .2s;display:none;}
         .mc-wrap-page span{display: inline-block;width: 14px;height: 14px;background-image: url(../images/arrow_icon2.png);background-position: 0 -62px;background-size: 76px auto;margin-right: 10px;opacity: 0.5;}
         .mc-wrap-page span.page-current{background-position: 0 -62px;opacity: 1}
     </style>
@@ -5420,7 +5421,7 @@
     <span class="icon"></span>
 </div>
 <script src="../js/app.utils.min.js"></script>
-<script src="../js/onepage.js"></script>
+<script src="../js/onepage_11.js"></script>
 
 
 <script>
