--- a/overseas/fashion/fashion_en.html
+++ b/overseas/fashion/fashion_en.html
@@ -326,7 +326,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
                     FEATURES
                 </div>
                 <div class="flr-bd">
-                    <ul class="goods-list cf" marketStart="" marketLength="" marketUrl="http://lillian98.github.io/overseas/fashion/js/tjw155af8c7dc8cc6.js?t=201507231105" marketTpl='<li><div class="goods-img"><a href="{#recommendUrl#}" target="_blank"><img data-lazy-img="{#image#}" alt="{#recommendName#}"/></a></div><div class="goods-detail"><div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div><i class="goods-name-line"></i><div class="goods-info">{#defined1#}</div></div></li>' marketOnLoad="xmlLoad(1)"></ul>
+                    <ul class="goods-list cf" marketStart="" marketLength="" marketUrl="http://cdn.javiermu.com/myappname/static/tools/xml/tjw/tjw2015/tjw155af8c7dc8cc6.js?t=201508131033" marketTpl='<li><div class="goods-img"><a href="{#recommendUrl#}" target="_blank"><img data-lazy-img="{#image#}" alt="{#recommendName#}"/></a></div><div class="goods-detail"><div class="goods-name"><a href="{#recommendUrl#}" target="_blank">{#recommendName#}</a></div><i class="goods-name-line"></i><div class="goods-info">{#defined1#}</div></div></li>' marketOnLoad="xmlLoad(1)"></ul>
                 </div>
             </div>
         </div>
