--- a/module/index.html
+++ b/module/index.html
@@ -272,6 +272,7 @@ input[id=category_rank]:checked~.wrapper .wrap-module .pro[data-category='rank']
 			height: 550px;
 			overflow: hidden;
 			background-color: rgb(49, 163, 68);
+			transition: transform .4s .2s;
 		}
 		.pro-shop-11 li:hover .mod-tri-left{
 			position: absolute;
@@ -286,6 +287,7 @@ input[id=category_rank]:checked~.wrapper .wrap-module .pro[data-category='rank']
 		}
 		.pro-shop-11 li:hover .layer-mid-mask-text{
 			opacity: 1;
+			transition: opacity .4s .3s;
 		}
 	</style>
 	<div class="pro pro-shop" data-width='260' data-category="shops" data-effective='pic mask'>
